@@ -25,3 +25,10 @@ test {
             "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
     )
 }
+
+tasks.withType(JavaExec) {
+    jvmArgs(
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+    )
+}
